2015-03-19  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add ATLAS dijet analysis (ATLAS_2014_I1325553).

	* Add ATLAS Zpt analysis (ATLAS_2014_I1300647).

2015-03-18  Andy Buckley  <andy.buckley@cern.ch>

	* Adding CMS_2014_I1298810 and CMS_2014_I1303894 analyses.

2015-03-18  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add PDG_TAUS analysis which makes use of the TauFinder.

	* Add ATLAS 'traditional' Underlying Event in Z->mumu analysis (ATLAS_2014_I1315949).

2015-03-18  Andy Buckley  <andy.buckley@cern.ch>

	* Change UnstableFinalState duplicate resolution to use the last
	in a chain rather than the first.

2015-03-17  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Update Taufinder to use decaytyoe (can be HADRONIC, LEPTONIC or
	ANY), in FastJet.cc --- set TauFinder mode to hadronic for tau-tagging

2015-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Cuts-based constructor to PrimaryHadrons.

	* Adding missing compare() method to HeavyHadrons projection.

2015-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Cuts-based constructors and other tidying in UnstableFinalState and HeavyHadrons

2015-03-03  Andy Buckley  <andy.buckley@cern.ch>

	* Add support for a PLOT meta-file argument to rivet-cmphistos.

2015-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* Improved time reporting.

2015-02-24  Andy Buckley  <andy.buckley@cern.ch>

	* Add Particle::fromHadron and Particle::fromPromptTau, and add a
	boolean 'prompt' argument to Particle::fromTau.

	* Fix WFinder use-transverse-mass property setting. Thanks to Christian Gutschow.

2015-02-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add more protection against math domain errors with log axes.

	* Add some protection against nan-valued points and error bars in make-plots.

2015-02-03  Andy Buckley  <andy.buckley@cern.ch>

	* Converting 'bitwise' to 'logical' Cuts combinations in all analyses.

2015-02-02  Andy Buckley  <andy.buckley@cern.ch>
