@@ -107,6 +107,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1315949.info \
   ATLAS_2014_I1325553.info \
   ATLAS_2014_I1300647.info \
+  ATLAS_2014_I1288706.info \
   BABAR_2003_I593379.info \
   BABAR_2005_S6181155.info \
   BABAR_2007_S6895344.info \
