@@ -1,0 +1,30 @@
+# BEGIN PLOT /ATLAS_2014_I1288706/d..-x..-y..
+LeftMargin=1.5
+LogX=0
+LogY=0
+GofType=chi2
+GofLegend=0
+LegendYPos=0.8
+LegendXPos=0.5
+RatioPlotYMin=0.6
+RatioPlotYMax=1.3
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1288706/d01-x01-y01
+Title=$Z\rightarrow \mu\mu$, "dressed", extended phase space
+YLabel=$\frac{\text{d}\sigma}{\text{d}m_{\mu\mu}}$ [pb/GeV]
+XLabel=$m_{\mu\mu}$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1288706/d02-x01-y01
+Title=$Z\rightarrow \mu\mu$, "dressed", nominal phase space
+YLabel=$\frac{\text{d}\sigma}{\text{d}m_{\mu\mu}}$ [pb/GeV]
+XLabel=$m_{\mu\mu}$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1288706/d02-x01-y02
+Title=$Z\rightarrow ee$, "dressed", nominal phase space
+YLabel=$\frac{\text{d}\sigma}{\text{d}m_{ee}}$ [pb/GeV]
+XLabel=$m_{ee}$ [GeV]
+# END PLOT
+
