@@ -103,6 +103,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1315949.plot \
   ATLAS_2014_I1325553.plot \
   ATLAS_2014_I1300647.plot \
+  ATLAS_2014_I1288706.plot \
   BABAR_2003_I593379.plot \
   BABAR_2005_S6181155.plot \
   BABAR_2007_S6895344.plot \
