@@ -1,0 +1,41 @@
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1288706/d01-x01-y01
+Path=/REF/ATLAS_2014_I1288706/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+14.5	2.5	2.5 	12.410  1.651  1.651
+19.5	2.5	2.5 	22.119	2.809  2.809
+25.0	3.0	3.0 	14.347	1.435  1.435
+32.0	4.0	4.0 	6.663	0.566  0.566
+41.0	5.0	5.0 	2.866	0.224  0.224
+56.0	10.0	10.0	1.473	0.105  0.105
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1288706/d02-x01-y01
+Path=/REF/ATLAS_2014_I1288706/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+28.5	2.5	2.5    1.852    0.067  0.067
+33.5	2.5	2.5    3.077	0.095  0.095
+38.5	2.5	2.5    2.525	0.068  0.068
+43.5	2.5	2.5    1.960	0.045  0.045
+48.5	2.5	2.5    1.565	0.034  0.034
+53.5	2.5	2.5    1.343	0.028  0.028
+58.5	2.5	2.5    1.190	0.024  0.024
+63.5	2.5	2.5    1.183	0.022  0.022
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1288706/d02-x01-y02
+Path=/REF/ATLAS_2014_I1288706/d02-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+28.5	2.5	2.5    1.980   0.121  0.121
+33.5	2.5	2.5    3.342   0.177  0.177
+38.5	2.5	2.5    2.782   0.131  0.131
+43.5	2.5	2.5    1.970   0.095  0.095
+48.5	2.5	2.5    1.701   0.073  0.073
+53.5	2.5	2.5    1.388   0.057  0.057
+58.5	2.5	2.5    1.214   0.045  0.045
+63.5	2.5	2.5    1.183   0.038  0.038
+# END YODA_SCATTER2D 
