@@ -85,6 +85,7 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1315949.yoda \
   ATLAS_2014_I1325553.yoda \
   ATLAS_2014_I1300647.yoda \
+  ATLAS_2014_I1288706.yoda \
   BABAR_2003_I593379.yoda \
   BABAR_2005_S6181155.yoda \
   BABAR_2006_S6511112.yoda \
