@@ -4,6 +4,8 @@
 
 	* Add ATLAS Zpt analysis (ATLAS_2014_I1300647).
 
+	* Add ATLAS low-mass Drell-Yan analysis (ATLAS_2014_I1288706).
+
 2015-03-18  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding CMS_2014_I1298810 and CMS_2014_I1303894 analyses.
